--- a/Tsig/WebContent/navbar.xhtml
+++ b/Tsig/WebContent/navbar.xhtml
@@ -5,9 +5,9 @@
 	xmlns:b="http://bootsfaces.net/ui">
 
 <nav>
-	<b:navBar brandImg="resources/Images/logo.png"  brandHref="#" inverse="true" static="true" id="nav" >
+	<b:navBar brandImg="#{resource['Images:logo.png']}"  brandHref="index.xhtml" inverse="true" static="true" id="nav" >
 	    <b:navbarLinks >
-	    
+	  
 	    	<b:dropMenu value="Inmuebles" rendered="#{usuarioMB.log}" >
 	    	
 	    		<b:navLink header="Casa"></b:navLink>
