--- a/Tsig/WebContent/consultas.xhtml
+++ b/Tsig/WebContent/consultas.xhtml
@@ -156,7 +156,7 @@
 		for (key in idFilter){
 			    filt[key] = new OpenLayers.Filter.Comparison({
 			    type: OpenLayers.Filter.Comparison.EQUAL_TO,
-			    property: "numpunto",
+			    property: "idpunto",
 			    value: idFilter[key]
 			});
 			
