Consultas Logicas Apto+ Casa terminado, solamente falta las geograficas

--- a/Tsig/WebContent/altaApto.xhtml
+++ b/Tsig/WebContent/altaApto.xhtml
@@ -102,7 +102,7 @@
 		           
 		           puntos.style = OpenLayers.Util.applyDefaults({strokeColor: "#0000ff"}, 
 		                    OpenLayers.Feature.Vector.style["default"]);
-		           puntos.style.externalGraphic="resources/Images/casa.png";
+		           puntos.style.externalGraphic="resources/Images/apto.png";
 		           puntos.style.graphicWidth= 40;
 		           puntos.style.graphicHeight= 32;
 		           puntos.style.fillOpacity=1;
