commit pre merge final

--- a/Tsig/WebContent/detalleInmueble.xhtml
+++ b/Tsig/WebContent/detalleInmueble.xhtml
@@ -435,7 +435,7 @@
   	
   	 
     <h:inputHidden value="#{propiedadMB.idPunto}" id="idcasa" />
-    <h:inputHidden value="#{propiedadMB.propiedad}" id="propiedad" />
+    <h:inputHidden value="#{propiedadMB.propiedadClick}" id="propiedad" />
 
 
 
