Mensajes testeado y andando

--- a/Tsig/WebContent/index.xhtml
+++ b/Tsig/WebContent/index.xhtml
@@ -20,7 +20,11 @@
    <ui:include src="/navbar.xhtml" />
    
    <div id="cont" class="contenedor">
-		
+	<b:jumbotron >
+	    <h1 style="padding:5px;">Bienvenido a GeoInmo!</h1>
+	    <p style="padding:5px;" >  Para comenzar puedes buscar un inmueble a tus medidas</p>
+	    <p style="padding:5px;"> <a class="btn btn-primary btn-lg" href="consultas.xhtml" >Comienza!</a></p>
+	</b:jumbotron>
     </div>
   </h:body>
 </html>
