revisando casi pronto todo

--- a/Tsig/WebContent/altaApto.xhtml
+++ b/Tsig/WebContent/altaApto.xhtml
@@ -132,6 +132,7 @@
 
 								input.value= puntos.features.length;
 								
+								feature.attributes.estado="privada";
 								//feature.attributes.numpunto=input.value;
 								
 								//alert(input.value);
@@ -161,7 +162,7 @@
 	}
     </script>
 </h:head>
-
+ <ui:include src="/navbar.xhtml" />
 <h:body class="fondo" onload="init()" >
 	
 
