--- a/Tsig/WebContent/poligonos.xhtml
+++ b/Tsig/WebContent/poligonos.xhtml
@@ -24,6 +24,7 @@
 		}
 	</style>
 	</h:head>
+	   <ui:include src="/navbar.xhtml" />
 <h:body onload='init()' class="fondo">
 
 <div id="cont" class="contenedor">
