--- a/Tsig/WebContent/reportes.xhtml
+++ b/Tsig/WebContent/reportes.xhtml
@@ -413,11 +413,12 @@
 
 	 </script>
   </h:head>
-     
+  
+   <ui:include src="/navbar.xhtml" />
    <h:body class="fondo" onload="init()"  rendered="#{usuarioMB.log}">
    
 
-   
+
    <div id="cont" class="contenedor">
 
 
