--- a/Tsig/WebContent/modificarApto.xhtml
+++ b/Tsig/WebContent/modificarApto.xhtml
@@ -14,8 +14,7 @@
 
 <script type="text/javascript"   src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 
-<link rel="stylesheet" href="http://openlayers.org/en/v3.1.1/css/ol.css"
-	type="text/css"></link>
+<link rel="stylesheet" href="http://openlayers.org/en/v3.1.1/css/ol.css"	type="text/css"></link>
 <style>
 
 .map {
