--- a/Tsig/WebContent/reportesZonas.xhtml
+++ b/Tsig/WebContent/reportesZonas.xhtml
@@ -9,7 +9,7 @@
 <h:head>
  <h:outputStylesheet library="css" name="styles.css" />
 
-<link rel="stylesheet" href="../resources/css/ol.css"></link>
+<link rel="stylesheet" href="resources/css/ol.css"></link>
 
 <script src="http://www.openlayers.org/api/2.11/OpenLayers.js"></script>
 <script type="text/javascript" src="resources/js/poligonos2.js"></script>
