Revisado todo andando correctamente, version final(Bruno)

--- a/Tsig/WebContent/modificarApto.xhtml
+++ b/Tsig/WebContent/modificarApto.xhtml
@@ -164,7 +164,7 @@ var mapoptions =
 	}
     </script>
 </h:head>
-
+<ui:include src="/navbar.xhtml" />
 <h:body class="fondo" onload="init()" >
 
 
